--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^16.9.35",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-transform-define": "^2.0.0",
     "gray-matter": "^4.0.2",
     "react-markdown": "^4.3.1"
   }
