--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "dev": "gatsby develop"
   },
   "devDependencies": {
+    "@types/react": "^16.9.35",
     "gatsby": "^2.22.4",
+    "gatsby-plugin-typescript": "^2.4.3",
     "gatsby-source-filesystem": "^2.3.7",
     "gatsby-transformer-remark": "^2.8.12",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "typescript": "^3.9.3"
   }
 }
