--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.35",
+    "@types/styled-components": "^5.1.0",
     "gatsby": "^2.22.4",
     "gatsby-plugin-typescript": "^2.4.3",
     "gatsby-source-filesystem": "^2.3.7",
     "gatsby-transformer-remark": "^2.8.12",
+    "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
+    "styled-components": "^5.1.0",
     "typescript": "^3.9.3"
   }
 }
