--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "devDependencies": {
     "@types/react": "^16.9.35",
     "@types/styled-components": "^5.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.22.4",
+    "gatsby-plugin-styled-components": "^3.3.2",
     "gatsby-plugin-typescript": "^2.4.3",
     "gatsby-source-filesystem": "^2.3.7",
     "gatsby-transformer-remark": "^2.8.12",
