--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.35",
+    "@types/sass": "^1.16.0",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.22.4",
@@ -19,5 +20,8 @@
     "react-markdown": "^4.3.1",
     "styled-components": "^5.1.0",
     "typescript": "^3.9.3"
+  },
+  "dependencies": {
+    "sass": "^1.26.5"
   }
 }
